Finished logic for scoring and timer.  Updated CSS to highlight the label for a selected answer for visibility. Timer set to 9000 for testing purposes.  Wired Done button to checkAnswers function.  Changed variable names to prevent confusion/overwritng data.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,20 @@
-.content{
-    background-color:black;
-    color:lime
+body {}
+
+.title {
+    font-size: 48pt;
 }
-.title{
-    font-size:48pt;
+
+.done:hover {
+    background-color: black;
+    color: lime;
+}
+
+label:hover {
+    background-color: black;
+    color: lime;
+}
+
+input[type=radio]:checked+label {
+    background-color: black;
+    color: lime;
 }
